# PodRacer

./: .gitattributes  .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  Rocket.toml  cli_api.sh  config.toml  create_feed.sh
.cargo/: config.toml
.github/workflows/: publish.yml  release_artifacts.yaml
podarch/: Cargo.toml
podarch/src/: main.rs
racer/: Cargo.toml  rss
racer/src/: lib.rs
server/: Cargo.toml  build.rs
server/src/: helpers.rs  main.rs  routes.rs
server/static/: robots.txt  styles.css
server/templates/: 422.html.tera  create_feed_form.html.tera  edit_feed.html.tera  feed_list.html.tera  feed_not_found.html.tera  generic_text.html.tera  macros.html.tera  submit_failure.html.tera  submit_success.html.tera
service_files/: how_to.md  podcast_backup.sh  podracer.service  reload_podracer_service.sh
src/: main.rs  racer.rs  routes.rs  utils.rs
static/: form.html  index.html  main.css  new_podcast_form.html  styles.css  submit_failure.html  submit_success.html
templates/: 404.html.tera  create_feed_form.html.tera  macros.html.tera  submit_failure.html.tera  submit_success.html  submit_success.html.tera
