[package]
name = "pod_racer"
version = "0.1.0"
authors = ["Zach Nielsen <zach@zachn.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "1.9.0"
reqwest = { version = "0.10.8", features = ["blocking"] }
chrono = "0.4.19"
