[package]
name = "racer"
version = "0.1.0"
authors = ["Zach Nielsen <zach@zachn.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fail-on-warnings = []

[dependencies]
reqwest = { version = "0.10.8", features = ["blocking"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "3.0.1"
rss = "1.9.0"
