[package]
name = "racer"
version = "0.2.1"
authors = ["Zach Nielsen <zach@zachn.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fail-on-warnings = []

# If compiling on a system without OpenSSL installed, or cross-compiling for a different
# architecture, enable this feature to compile OpenSSL as part of the build.
# See https://docs.rs/openssl/#vendored for more.
static_ssl = ['openssl/vendored']

[dependencies]
reqwest = { version = "0.11" }
openssl = { version = "*", features = ["vendored"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1" }
dirs = "3.0.1"
uuid = { version = "*", features = ["v4"] }
rss = "1.10"

[dependencies.openssl]
version = "*"
optional = true
features = ["vendored"]

