[package]
name = "podracer"
version = "0.1.0"
authors = ["Zach Nielsen <zach@zachn.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fail-on-warnings = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rocket = "0.4.10"
racer = { path = "../racer" }
tera = "1"
dirs = "3.0.1"
rss = "1.10.0"


[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["serve", "tera_templates", "serde"]
