[package]
name = "podracer"
version = "0.2.1"
authors = ["Zach Nielsen <zach@zachn.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fail-on-warnings = []

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
racer = { path = "../racer" }
tera = "1"
dirs = "3.0.1"
rss = "1.10.0"


[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["uuid"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["tera"]
